--- a/04_Clean_Features/04_07/End/04_07.ipynb
+++ b/04_Clean_Features/04_07/End/04_07.ipynb
@@ -53,7 +53,6 @@
        "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
        "      <th>Age_clean</th>\n",
-       "      <th>Embarked_clean</th>\n",
        "      <th>Fare_clean</th>\n",
        "      <th>Fare_clean_tr</th>\n",
        "      <th>Title</th>\n",
@@ -77,7 +76,6 @@
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "      <td>22.0</td>\n",
-       "      <td>S</td>\n",
        "      <td>7.2500</td>\n",
        "      <td>1.486167</td>\n",
        "      <td>Mr</td>\n",
@@ -99,7 +97,6 @@
        "      <td>C85</td>\n",
        "      <td>C</td>\n",
        "      <td>38.0</td>\n",
-       "      <td>C</td>\n",
        "      <td>71.2833</td>\n",
        "      <td>2.347457</td>\n",
        "      <td>Mrs</td>\n",
@@ -121,7 +118,6 @@
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "      <td>26.0</td>\n",
-       "      <td>S</td>\n",
        "      <td>7.9250</td>\n",
        "      <td>1.512864</td>\n",
        "      <td>Miss</td>\n",
@@ -143,7 +139,6 @@
        "      <td>C123</td>\n",
        "      <td>S</td>\n",
        "      <td>35.0</td>\n",
-       "      <td>S</td>\n",
        "      <td>53.1000</td>\n",
        "      <td>2.213191</td>\n",
        "      <td>Mrs</td>\n",
@@ -165,7 +160,6 @@
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "      <td>35.0</td>\n",
-       "      <td>S</td>\n",
        "      <td>8.0500</td>\n",
        "      <td>1.517606</td>\n",
        "      <td>Mr</td>\n",
@@ -191,19 +185,19 @@
        "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
        "4                           Allen, Mr. William Henry    male  35.0      0   \n",
        "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  Age_clean Embarked_clean  \\\n",
-       "0      0         A/5 21171   7.2500   NaN        S       22.0              S   \n",
-       "1      0          PC 17599  71.2833   C85        C       38.0              C   \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S       26.0              S   \n",
-       "3      0            113803  53.1000  C123        S       35.0              S   \n",
-       "4      0            373450   8.0500   NaN        S       35.0              S   \n",
+       "   Parch            Ticket     Fare Cabin Embarked  Age_clean  Fare_clean  \\\n",
+       "0      0         A/5 21171   7.2500   NaN        S       22.0      7.2500   \n",
+       "1      0          PC 17599  71.2833   C85        C       38.0     71.2833   \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S       26.0      7.9250   \n",
+       "3      0            113803  53.1000  C123        S       35.0     53.1000   \n",
+       "4      0            373450   8.0500   NaN        S       35.0      8.0500   \n",
        "\n",
-       "   Fare_clean  Fare_clean_tr Title  Cabin_ind  Family_cnt  \n",
-       "0      7.2500       1.486167    Mr          0           1  \n",
-       "1     71.2833       2.347457   Mrs          1           1  \n",
-       "2      7.9250       1.512864  Miss          0           0  \n",
-       "3     53.1000       2.213191   Mrs          1           1  \n",
-       "4      8.0500       1.517606    Mr          0           0  "
+       "   Fare_clean_tr Title  Cabin_ind  Family_cnt  \n",
+       "0       1.486167    Mr          0           1  \n",
+       "1       2.347457   Mrs          1           1  \n",
+       "2       1.512864  Miss          0           0  \n",
+       "3       2.213191   Mrs          1           1  \n",
+       "4       1.517606    Mr          0           0  "
       ]
      },
      "execution_count": 1,
@@ -467,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
